[FIX] Loading links that reference invalid elements don't break the loading procedure [FEATURE] Invalidly pointing links are now highlighted as long as they are not corrected

--- a/src/com/bkahlert/nebula/widgets/jointjs/html/less/style.less
+++ b/src/com/bkahlert/nebula/widgets/jointjs/html/less/style.less
@@ -58,6 +58,14 @@ body.disabled {
 		.marker-arrowhead-group-target {
 			cursor: move !important;
 		}
+		
+		&[abandoned-source] .marker-source,
+		&[abandoned-target] .marker-target {
+			fill-opacity: 1;
+			fill: darken(@brand-warning, 0%);
+			stroke: darken(@brand-warning, 10%);
+			stroke-width: 2px;
+		}
 	}
 }
 
